--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -1,3 +1,5 @@
+@import 'fonts'
+
 body, h1, h2, h3, h4, h5, h6, ul, ol, li, p
   margin: 0
   padding: 0
@@ -7,5 +9,5 @@ body, h1, h2, h3, h4, h5, h6, ul, ol, li, p
     position: absolute
     left: 50%
     top: 0
-    min-width: 100%
+    max-width: 100%
     transform: translateX(-50%)
